package slowport.slowapi;

public class SlowApi{

}
